--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ license = "MIT"
 repository = "https://github.com/jjyr/roast2d"
 description = "Roast2D is a homebrew 2D game engine inspired by high_impact"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [features]
 debug_mut = []
 sdl2-static-link = ["sdl2/static-link"]
