--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,22 +12,39 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 debug_mut = []
+# Require SDL2 platform
 sdl2-static-link = ["sdl2/static-link"]
 sdl2-bundled = ["sdl2/bundled"]
+# Require Web platform
+wasm-debug = ["console_error_panic_hook"]
 
 [dependencies]
 anyhow = "1.0.86"
 bitflags = "2.6.0"
+cfg-if = "1.0.0"
 dyn-clone = "1.0.17"
 glam = "0.28.0"
 image = { version = "0.25.2", default-features = false, features = ["png"] }
+log = "0.4.22"
 rusttype = "0.9.3"
-sdl2 = { version = "0.37.0", features = ["unsafe_textures"] }
 serde = { version = "1.0.207", features = ["derive"] }
 serde_json = "1.0.124"
+
+# Non-Wasm32 target
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+sdl2 = { version = "0.37.0", features = ["unsafe_textures"] }
+
+# Wasm32 target
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2"
+console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [lints.clippy]
 too_many_arguments = "allow"
 
 [dev-dependencies]
 rand = "0.8.5"
+
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.3"
+getrandom = { version = "0.2", features = ["js"] }
