--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,8 @@ serde_json = "1.0.124"
 
 # Non-Wasm32 target
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-sdl2 = {version = "0.37.0", features = ["unsafe_textures"]}
 futures-lite = "2.3"
+sdl2 = {version = "0.37.0", features = ["unsafe_textures"]}
 
 # Wasm32 target
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -42,15 +42,29 @@ js-sys = "0.3"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
+features = [
+  "Window",
+  "Document",
+  "Element",
+  "HtmlCanvasElement",
+  "CanvasRenderingContext2d",
+  "WorkerGlobalScope",
+  "Response",
+  "ImageData",
+  "ImageBitmap",
+  "MouseEvent",
+  "KeyboardEvent",
+  "Performance",
+  "CssStyleDeclaration"
+]
 version = "0.3"
-features = ["Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "WorkerGlobalScope", "Response", "ImageData", "ImageBitmap", "MouseEvent", "KeyboardEvent", "Performance"]
 
 [lints.clippy]
 too_many_arguments = "allow"
 
 [dev-dependencies]
-rand = "0.8.5"
 env_logger = "0.11"
+rand = "0.8.5"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 getrandom = {version = "0.2", features = ["js"]}
