--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,19 +23,19 @@ anyhow = "1.0.86"
 bitflags = "2.6.0"
 dyn-clone = "1.0.17"
 glam = "0.28.0"
-image = {version = "0.25.2", default-features = false, features = ["png"]}
+image = { version = "0.25.2", default-features = false, features = ["png"] }
 log = "0.4.22"
 rusttype = "0.9.3"
-serde = {version = "1.0.207", features = ["derive"]}
+serde = { version = "1.0.207", features = ["derive"] }
 serde_json = "1.0.124"
 
 # Non-Wasm32 target
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-sdl2 = {version = "0.37.0", features = ["unsafe_textures"]}
+sdl2 = { version = "0.37.0", features = ["unsafe_textures"] }
 
 # Wasm32 target
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-console_error_panic_hook = {version = "0.1.7", optional = true}
+console_error_panic_hook = { version = "0.1.7", optional = true }
 console_log = "1.0"
 js-sys = "0.3"
 wasm-bindgen = "0.2"
@@ -54,7 +54,7 @@ features = [
   "MouseEvent",
   "KeyboardEvent",
   "Performance",
-  "CssStyleDeclaration"
+  "CssStyleDeclaration",
 ]
 version = "0.3"
 
@@ -62,10 +62,15 @@ version = "0.3"
 too_many_arguments = "allow"
 
 [dev-dependencies]
+criterion = "0.5.1"
 env_logger = "0.11"
 pollster = { version = "0.3.0", features = ["macro"] }
 rand = "0.8.5"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
-getrandom = {version = "0.2", features = ["js"]}
+getrandom = { version = "0.2", features = ["js"] }
 wasm-bindgen-test = "0.3"
+
+[[bench]]
+name = "sat_collision"
+harness = false
