--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,13 +21,14 @@ web-debug = ["console_error_panic_hook"]
 [dependencies]
 anyhow = "1.0.86"
 bitflags = "2.6.0"
-dyn-clone = "1.0.17"
 glam = "0.28.0"
 image = { version = "0.25.2", default-features = false, features = ["png"] }
 log = "0.4.22"
 rusttype = "0.9.3"
 serde = { version = "1.0.207", features = ["derive"] }
 serde_json = "1.0.124"
+roast2d_derive = { version = "0", path = "roast2d_derive" }
+
 
 # Non-Wasm32 target
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
