--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ rusttype = "0.9.3"
 serde = { version = "1.0.207", features = ["derive"] }
 serde_json = "1.0.124"
 roast2d_derive = { version = "0", path = "roast2d_derive" }
+hashbrown = "0.15.0"
 
 
 # Non-Wasm32 target
