Move code into roast2d_physics and roast2d_ldtk crates

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Rust builds
 target/
 
+Cargo.lock
 # This file contains environment-specific configuration like linker settings
 .cargo/config.toml
 
